# coastal-hotel

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
goorawling/: README.md  get-gmap-review.py  gmaps_reviews.json  hotels_processed.csv  requirements.txt  run.py
pre-scraping/: data-prepare-proposal.md  data-prepare.ipynb  extracting-data.ipynb  get-data.py  google-reviews-extracting.ipynb  pre-process.ipynb  stay-detail.ipynb
silver-label/: agent.py  evaluate.py  proposal.md  rerun.py
silver-label/prompts/: evaluator.md  review_analyst.md
topic-modeling/: implement.ipynb  prepare.ipynb  topic_modeling.py
